# app_serial_tool

./: .gitattributes  .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml  build.gradle  gradle.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/libs/: README.md  usb-serial-for-android-3.8.0.aar
android/res/drawable/: ic_serial.xml  splash_background.xml
android/res/values/: colors.xml  libs.xml  styles.xml
android/res/values-v31/: styles.xml
android/res/xml/: device_filter.xml  (+1 more)
src/communication/: ble_uart.cpp  ble_uart.h  comm_define.h  comm_manager.cpp  comm_manager.h  command.cpp  command.h  data_packet.cpp  data_packet.h  serial_port.cpp  serial_port.h  update_firmware.cpp  update_firmware.h
src/core/: serial_interface.h  serial_manager.cpp  serial_manager.h  serial_types.h
src/data/: LogDataManager.cpp  LogDataManager.h  Parameter.h  RealTimeDataManager.h  TestCasePoint.h  TestDataManager.h  aging_test_data_manager.cpp  aging_test_data_manager.h  arameter.cpp  data_type.h  esc_error_info.cpp  esc_error_info.h  param_manager.cpp  param_manager.h  realtime_data_manager.cpp  test_case_point.cpp  test_data_manager.cpp  wave_data.h
src/platform/: platform_serial_factory.cpp  platform_serial_factory.h
src/public/: app_interface.cpp  app_interface.h
src/utils/: Config.cpp  Config.h  CustomByteArray.cpp  CustomByteArray.h  Linguist.cpp  Linguist.h  QtShareFile.cpp  QtShareFile.h  Utility.cpp  Utility.h  UtilsDefine.h  custom_byte_array.cpp  custom_byte_array.h
(+121 files in other folders)
